--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_markdown: ^0.6.15
   url_launcher: ^6.1.8
   flutter_launcher_icons: ^0.13.1
+  reorderable_grid_view: ^2.2.6
 
 dev_dependencies:
   flutter_test:
