--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.1.8
   flutter_launcher_icons: ^0.13.1
   reorderable_grid_view: ^2.2.6
+  csv: ^5.1.1
 
 dev_dependencies:
   flutter_test:
