--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   reorderable_grid_view: ^2.2.6
   csv: ^5.1.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
